feedback form: wrap-up: since it registered once, no more need for a dirty hack... what a dirty hack!

--- a/src/index.scss
+++ b/src/index.scss
@@ -69,14 +69,14 @@ body {
 }
 
 a {
-	color: rgb(0, 100, 200);
+    color: var(--blue);
 	text-decoration: none;
 	&:hover {
 		text-decoration: underline;
 	}
-	&:visited {
-		color: rgb(0, 80, 160);
-	}
+	// &:visited {
+		// color: rgb(0, 80, 160);
+	// }
 }
 
 button {
